# codewizard-sherpa

./: .editorconfig  .gitattributes  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/skills/phase-architect/: SKILL.md
.claude/skills/phase-story-executor/: SKILL.md
.claude/skills/phase-story-validator/: SKILL.md
.claude/skills/phase-story-writer/: SKILL.md
.claude/skills/roadmap-phase-designer/: SKILL.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adr-amendment.md  new-probe.md  new-skill.md
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml
docs/: architecture.md  auto-agent-design.md  context.md  contributing.md  gemini-auto-agent-design.md  get-started.md  index.md  local.md  localv2.md  production-design.md  roadmap.md
docs/architecture/: local-poc.excalidraw
docs/phases/00-bullet-tracer-foundations/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/01-context-gather-layer-a-node/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/02-context-gather-layers-b-g/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/03-vuln-deterministic-recipe/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/04-vuln-llm-fallback-rag/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/05-sandbox-trust-gates/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/06-sherpa-state-machine/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/06.5-per-task-class-eval-harness/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/phases/07-migration-task-class/: High-level-impl.md  README.md  critique.md  design-best-practices.md  design-performance.md  design-security.md  final-design.md  phase-arch-design.md
docs/production/: README.md  design.md
docs/production/adrs/: 0001-layered-hybrid-orchestration.md  0002-langgraph-as-runtime-sherpa-as-discipline.md  0003-temporal-as-workflow-substrate.md  0004-python-as-harness-language.md  0019-sandbox-stack.md  (+34 more)
scripts/: check_coverage_carve_outs.py  check_forbidden_patterns.py  regen_golden.py  regen_probe_contract_snapshot.py  regen_subschemas.py
src/codegenie/: __init__.py  __main__.py  _fence.py  audit.py  cli.py  errors.py  exec.py  hashing.py  logging.py  result.py  version.py
templates/: adr-amendment.md
tests/adv/: _helpers.py  conftest.py  test__helpers.py  test_env_var_strip.py  test_json_bomb_deep_nesting.py  test_json_bomb_huge_string.py  test_oversized_lockfile.py  test_path_traversal.py  test_planted_node_on_path_ignored.py  test_regex_dos_yarn_lock.py  test_secret_leak.py  test_symlink_escape.py  test_symlink_escape_in_declared_inputs.py  test_tsconfig_pathological.py  test_yaml_billion_laughs.py  test_yaml_unsafe_tag.py  test_zip_slip_kustomize.py
tests/bench/: _helpers.py  test_cache_hit_dispatch.py  test_cli_cold_start.py  test_coordinator_overhead.py
tests/fixtures/: README.md  _shape_test_kernel.py
tests/golden/: test_atomic_write.py  test_canonicalize_type_purity.py  test_golden_count_matches.py  test_goldens_match.py  test_line_endings.py  test_no_plaintext_in_goldens.py  test_phase1_yaml_golden_untouched.py  test_preserved_fields_win.py  test_regen_golden_portfolio_idempotent.py  test_underscore_prefix_skip.py
tests/integration/: test_writer_renders_confidence_section.py
tests/property/: test_dep_graph_strategy_dispatch.py  test_index_freshness_roundtrip.py  test_redacted_slice_roundtrip.py  test_runtime_trace_freshness_purity.py  test_skills_loader_monotone.py  test_sum_types_roundtrip.py  test_tccm_roundtrip.py  test_trace_coverage_invariants.py  test_truncate_tail.py
tests/smoke/: conftest.py  test_cli_end_to_end.py
tests/snapshots/: audit_event_names.json  probe_contract.v1.json
tests/unit/: _coordinator_fixtures.py  _fixture_regen_allowlist.py  conftest.py  test_adr_0002_records_s1_08_amendment.py  test_adr_inventory_phase2.py  test_audit_anchors.py  test_audit_models.py  test_cache_concurrent.py  test_cache_invalidation_scope.py  test_cache_store.py  test_ci_workflow.py  test_cli_audit_subcommand.py  test_cli_cold_start.py  test_cli_cold_start_imports.py  test_cli_exit_codes.py  test_cli_flags.py  test_cli_orchestration.py  test_cli_seam_sorted_dispatch.py  test_cli_tool_readiness.py  test_config_loader.py  test_coordinator.py  test_coordinator_budget.py  test_coordinator_prelude.py  test_distroless_target_built_image_digest_shape.py  test_errors.py  test_exec.py  test_fixture_distroless_target_regenerate_allowlist.py  test_fixture_distroless_target_shape.py  test_fixture_minimal_ts_regenerate_allowlist.py  test_fixture_minimal_ts_shape.py  test_fixture_monorepo_pnpm_regenerate_allowlist.py  test_fixture_monorepo_pnpm_shape.py  test_fixture_native_modules_regenerate_allowlist.py  test_fixture_native_modules_shape.py  test_fixture_node_monorepo_turbo_shape.py  test_fixture_node_typescript_helm_shape.py  test_fixture_non_node_go_shape.py  test_fixture_shape_kernel.py  test_fixture_stale_scip_regenerate_allowlist.py  test_fixture_stale_scip_shape.py  (+23 more)
tools/: fuzz_yarn_lock.py  regenerate_grammars_lock.sh  regenerate_probe_schemas.py
tools/grammars/: README.md
(+1334 files in other folders)
