[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "codewizard-sherpa"
description = "codewizard-sherpa — autonomous agentic system that opens PRs to modify code across repos at portfolio scale (local POC)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "codewizard-sherpa contributors" }]
keywords = ["codegenie", "codewizard-sherpa", "agent", "gather"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX",
  "Topic :: Software Development",
]
dynamic = ["version"]

# Gather-pipeline runtime closure — what the `fence` CI job (ADR-0002) guards.
# Adding an LLM SDK here is a violation of production ADR-0005 / phase ADR-0002
# / CLAUDE.md §"No LLM anywhere in the gather pipeline".
dependencies = [
  "click",
  "pyyaml",
  "jsonschema>=4.21",
  "pydantic>=2",
  "blake3",
  "structlog",
]

[project.optional-dependencies]
# Intentionally empty — its existence marks the slot semantically; the runtime
# closure is `[project.dependencies]` itself (ADR-0006 §Decision).
gather = []

# Harness extras. AC-7 of S1-01 invokes ruff/mypy/pytest; S1-04 needs
# pre-commit; S1-04's `mkdocs build --strict` needs mkdocs-material.
# Additional entries (import-linter, pip-audit, osv-scanner, bandit) are owned
# by S1-04 / S1-05; the floor below is the minimum to keep Phase 0 boots green.
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "mypy",
  "ruff",
  "pre-commit",
  "mkdocs-material",
]

# Phase 9+ slot — Temporal, Postgres clients land here.
service = []

# Phase 4+ slot — LLM SDKs (anthropic, langgraph, ...) land here, NOT in
# `[project.dependencies]`. This is the load-bearing structural separation
# the fence (ADR-0002) enforces.
agents = []

[project.scripts]
codegenie = "codegenie.__main__:main"

[tool.hatch.version]
path = "src/codegenie/version.py"
# Default regex doesn't tolerate the PEP 526 annotation
# (`__version__: str = "..."`); broaden it to accept an optional `: <type>`.
pattern = "^__version__(?:\\s*:\\s*[^=]+)?\\s*=\\s*['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["src/codegenie"]

[tool.hatch.build.targets.sdist]
include = [
  "src/codegenie",
  "README.md",
  "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Quality toolchain (story S1-02). One source of truth per phase-arch §Tradeoffs
# — no separate .ruff.toml, no setup.cfg. Later phases extend selected rules
# only by addition; weakening T201 / T20 (the "no print() in src/" invariant
# from phase-arch-design.md §Harness engineering / Logging strategy) requires
# an ADR amendment.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Minimum viable rule set — later phases extend by addition.
# T201 (print) is load-bearing: all logging goes through structlog.
select = ["E", "F", "I", "B", "UP", "T201"]

[tool.ruff.format]
# Empty sub-table is the AC-named opt-in marker for ruff format.

[tool.mypy]
python_version = "3.11"
strict = true
# warn_unreachable is a strict-extra; --strict does NOT enable it. Without
# this, dead-code-after-narrowing slips through silently.
warn_unreachable = true

[[tool.mypy.overrides]]
# tests/ runs under relaxed typing — fixtures and parametrize tables routinely
# use untyped defs. Strict checking still applies to fixture *types* (we do not
# set ignore_errors), only to def-level annotations.
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
# asyncio_mode = "auto" lets coroutine tests run without @pytest.mark.asyncio
# — S3-05's coordinator tests depend on this.
asyncio_mode = "auto"
testpaths = ["tests"]
# --cov-fail-under=85 is WIRED here; it goes live as a merge gate in S4-04
# once the vertical slice produces enough real code to clear the floor.
addopts = "-ra --strict-markers --cov=src/codegenie --cov-branch --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src/codegenie"]

[tool.coverage.report]
# cli.py is the ONLY architecturally-permitted coverage exemption per
# phase-arch-design.md §Testing strategy / Test pyramid (CLI plumbing is
# exercised end-to-end by S4-02's smoke test, not by unit-level coverage).
omit = ["src/codegenie/cli.py"]
