[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "codewizard-sherpa"
description = "codewizard-sherpa — autonomous agentic system that opens PRs to modify code across repos at portfolio scale (local POC)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "codewizard-sherpa contributors" }]
keywords = ["codegenie", "codewizard-sherpa", "agent", "gather"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX",
  "Topic :: Software Development",
]
dynamic = ["version"]

# Gather-pipeline runtime closure — what the `fence` CI job (ADR-0002) guards.
# Adding an LLM SDK here is a violation of production ADR-0005 / phase ADR-0002
# / CLAUDE.md §"No LLM anywhere in the gather pipeline".
dependencies = [
  "click",
  "pyyaml",
  "jsonschema>=4.21",
  "pydantic>=2",
  "blake3",
  "structlog",
  # S1-10: ``codegenie.depgraph`` ships the ``DepGraphStrategy`` alias whose
  # return type is ``networkx.DiGraph``; the strategy registry imports
  # ``networkx`` at runtime (TYPE_CHECKING + dispatch). The Phase-3 DepGraphProbe
  # (S4-05) serialises via ``nx.node_link_data``. Stays in the runtime closure
  # (not [project.optional-dependencies]) because the fence (ADR-0002) reads
  # only ``[project].dependencies``; the gather pipeline imports it eagerly.
  "networkx>=3.2",
]

[project.optional-dependencies]
# Intentionally empty — its existence marks the slot semantically; the runtime
# closure is `[project.dependencies]` itself (ADR-0006 §Decision).
gather = []

# Harness extras. AC-7 of S1-01 invokes ruff/mypy/pytest; S1-04 needs
# pre-commit; S1-04's `mkdocs build --strict` needs mkdocs-material.
# Additional entries (import-linter, pip-audit, osv-scanner, bandit) are owned
# by S1-04 / S1-05; the floor below is the minimum to keep Phase 0 boots green.
dev = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  # 02 S1-01: Hypothesis is the property-test runner for the IndexFreshness
  # round-trip deliverable named in 02-ADR-0006 §Consequences.
  "hypothesis",
  "mypy",
  "ruff",
  "pre-commit",
  "mkdocs-material",
  # S1-05: structural cold-start defense + supply-chain scanner. `osv-scanner`
  # is a Go binary; it ships via google/osv-scanner-action in CI rather than
  # through this list. `bandit` belongs to a later phase.
  "import-linter",
  "pip-audit",
  # S2-05: `codegenie.schema.validator` imports `jsonschema`; the package is
  # not py.typed so mypy --strict needs the stub distribution.
  "types-jsonschema",
  # S3-03: `codegenie.output.writer` imports `yaml`; PyYAML ships no inline
  # types so mypy --strict needs the stub distribution. Already mirrored in
  # the pre-commit mypy hook's `additional_dependencies` list.
  "types-PyYAML",
]

# Phase 9+ slot — Temporal, Postgres clients land here.
service = []

# Phase 4+ slot — LLM SDKs (anthropic, langgraph, ...) land here, NOT in
# `[project.dependencies]`. This is the load-bearing structural separation
# the fence (ADR-0002) enforces.
agents = []

[project.scripts]
codegenie = "codegenie.__main__:main"

[tool.hatch.version]
path = "src/codegenie/version.py"
# Default regex doesn't tolerate the PEP 526 annotation
# (`__version__: str = "..."`); broaden it to accept an optional `: <type>`.
pattern = "^__version__(?:\\s*:\\s*[^=]+)?\\s*=\\s*['\"](?P<version>[^'\"]+)['\"]"

[tool.hatch.build.targets.wheel]
packages = ["src/codegenie"]

[tool.hatch.build.targets.sdist]
include = [
  "src/codegenie",
  "README.md",
  "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Quality toolchain (story S1-02). One source of truth per phase-arch §Tradeoffs
# — no separate .ruff.toml, no setup.cfg. Later phases extend selected rules
# only by addition; weakening T201 / T20 (the "no print() in src/" invariant
# from phase-arch-design.md §Harness engineering / Logging strategy) requires
# an ADR amendment.
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Minimum viable rule set — later phases extend by addition.
# T201 (print) is load-bearing: all logging goes through structlog.
select = ["E", "F", "I", "B", "UP", "T201"]

[tool.ruff.lint.per-file-ignores]
# `codegenie.probes.base` is byte-for-byte `localv2.md §4` (ADR-0007). The
# §4 source has aligned trailing comments (E501) and a declarative empty
# `cache_key` method (B027) — both deliberate by the doc and not editable
# code-side. Adding a third entry here requires updating ADR-0007.
"src/codegenie/probes/base.py" = ["E501", "B027"]

[tool.ruff.format]
# `codegenie.probes.base` is excluded from ruff format because the doc
# (`localv2.md §4`) is the source of truth and uses aligned trailing
# comments + no blank line between successive `@dataclass` declarations.
# Letting ruff reformat the file would silently drift it away from §4.
exclude = ["src/codegenie/probes/base.py"]

[tool.mypy]
python_version = "3.11"
strict = true
# warn_unreachable is a strict-extra; --strict does NOT enable it. Without
# this, dead-code-after-narrowing slips through silently.
warn_unreachable = true

[[tool.mypy.overrides]]
# tests/ runs under relaxed typing — fixtures and parametrize tables routinely
# use untyped defs. Strict checking still applies to fixture *types* (we do not
# set ignore_errors), only to def-level annotations.
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# `codegenie.probes.base` is the frozen contract surface (ADR-0007). Its
# methods are declared with ellipsis bodies (`...`) verbatim from
# `localv2.md §4` — per ADR-0007 the doc is the source of truth and code
# may not deviate. mypy's `empty-body` check is silenced here ONLY so the
# contract surface can match §4 byte-for-byte; everything else under
# `codegenie.*` stays under `--strict`.
module = "codegenie.probes.base"
disable_error_code = ["empty-body"]

[[tool.mypy.overrides]]
# `pyarn` is an optional Phase 1 dependency gated by ADR-0003's land-time
# selection (S3-03 chose hand-rolled). When it IS installed (parity-test
# CI matrix job per S3-04 AC-2), mypy reports `import-untyped` because
# pyarn ships no `py.typed` marker; when NOT installed it reports
# `import-not-found`. `ignore_missing_imports` covers both states with
# one declaration so `_yarn._pyarn_parse` does not need a brittle
# per-line ignore that flips on every install-state toggle.
module = ["pyarn", "pyarn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# S1-10: `networkx` 3.x does not yet ship a `py.typed` marker (the stubs
# bundled with the library use `# type: ignore` patterns internally rather
# than a public typed surface). `ignore_missing_imports` keeps the
# `codegenie.depgraph` strategy alias importable under `mypy --strict`
# without polluting the registry module with per-line ignores. The
# `DepGraphStrategy` alias still carries the structural contract
# (`Callable[[ProbeContext, list[Mapping[str, Any]]], DiGraph]`) at the
# Python type level.
module = ["networkx", "networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
# asyncio_mode = "auto" lets coroutine tests run without @pytest.mark.asyncio
# — S3-05's coordinator tests depend on this.
asyncio_mode = "auto"
testpaths = ["tests"]
# `pythonpath = ["."]` so `tests/unit/test_probe_contract.py` (S2-02) can
# import the regen helpers from the bare `scripts/regen_probe_contract_snapshot.py`
# script without promoting `scripts/` to a package.
pythonpath = ["."]
# Default selection skips `bench` (advisory canaries — S5-01). Contributors
# get a fast local loop; CI's `bench` job uses `-m bench` explicitly to opt
# the three canaries in. `--strict-markers` then forces every `pytest.mark.*`
# to be declared below.
# Coverage ratchet (see docs/contributing.md §Project conventions): the
# `--cov-fail-under=85` floor below is the Phase 0 global gate. Phase 1
# (this phase) leaves the global unchanged in S4-04 and raises it to 90/80
# in S6-02 with the 85/75 per-module carve-outs declared in
# `[tool.coverage_carve_outs]` already in place (ADR-0005). Do NOT raise
# ahead.
addopts = "-ra --strict-markers -m \"not bench\" --cov=src/codegenie --cov-branch --cov-fail-under=85"
# Registered markers. `bench` partitions the advisory cold-start /
# coordinator-overhead / cache-hit-dispatch canaries that ship in
# `tests/bench/` (S5-01); they never gate merge — the structural
# cold-start defense is `import-linter` (S1-05).
markers = [
  "bench: advisory performance canaries — not run under the default suite",
  "adv: adversarial-fixture corpus tests (Phase 1 §S5-01/02/03)",
]

[tool.coverage.run]
branch = true
source = ["src/codegenie"]

[tool.coverage.report]
# cli.py is the ONLY architecturally-permitted coverage exemption per
# phase-arch-design.md §Testing strategy / Test pyramid (CLI plumbing is
# exercised end-to-end by S4-02's smoke test, not by unit-level coverage).
omit = ["src/codegenie/cli.py"]

# ---------------------------------------------------------------------------
# Per-module coverage carve-outs (ADR-0005). Declared as data so the script
# (`scripts/check_coverage_carve_outs.py`) and the CI-enforced test
# (`tests/unit/build/test_coverage_carve_outs.py`) read from one source.
#
# Why: `codegenie.probes.deployment` and `codegenie.probes.ci` have
# structurally-narrow branches (one `if` per supported CI provider /
# deployment marker) that make the higher 90/80 floor gameable by
# branch-checkbox tests asserting nothing meaningful — the exact Rule 9
# violation the carve-out was designed to prevent. See ADR-0005 §Tradeoffs
# and Global Rule 9 ("Tests verify intent, not just behavior") for the
# load-bearing rationale; the adversarial-fixture corpus carries
# behavioural correctness, coverage is supporting.
#
# The global `--cov-fail-under` is NOT raised in S4-04; S6-02 ratchets it to
# 90/80 with these 85/75 carve-outs already in place. Splitting the
# declaration from the ratchet is deliberate per
# `docs/phases/01-context-gather-layer-a-node/High-level-impl.md §Step 4`.
#
# Further carve-outs require a new ADR amending 0005. Adding a third row
# here without that ADR fails
# `tests/unit/build/test_coverage_carve_outs.py::test_carve_out_table_has_exactly_two_entries`.
# Each entry records BOTH the file path AND the dotted module name so a
# half-applied rename PR surfaces the drift via the same test.
# ---------------------------------------------------------------------------

[[tool.coverage_carve_outs.entries]]
path = "src/codegenie/probes/deployment.py"
module = "codegenie.probes.deployment"
line = 85
branch = 75
adr = "phase-01/ADR-0005"

[[tool.coverage_carve_outs.entries]]
path = "src/codegenie/probes/ci.py"
module = "codegenie.probes.ci"
line = 85
branch = 75
adr = "phase-01/ADR-0005"

# ---------------------------------------------------------------------------
# import-linter — structural cold-start defense (story S1-05, ADR phase-0006).
# Replaces the phase-arch-design-flagged flaky CLI timing canary with two
# `type: forbidden` contracts that block heavy modules from `codegenie.cli`
# (the CLI entry surface, lands in S4-02) and `codegenie` (the package's
# `__init__.py`, operative immediately). The blocklist is scoped to exact
# module names — NOT `codegenie.cli.**` — per High-level-impl.md §Step 1
# §Risks specific to this step (over-block warning).
# ---------------------------------------------------------------------------

[tool.importlinter]
root_packages = ["codegenie"]
# Required by import-linter v2 when `forbidden_modules` names third-party
# (external) packages — the import graph must traverse them to reason about
# transitive imports.
include_external_packages = true

[[tool.importlinter.contracts]]
name = "codegenie.cli must not top-level import heavy modules"
type = "forbidden"
source_modules = ["codegenie.cli"]
forbidden_modules = ["yaml", "jsonschema", "pydantic", "blake3", "structlog"]
# S3-03 (phase 02): the writer-signature tightening narrows
# ``_seam_*_envelope`` parameters to ``RedactedSlice``. The class is
# imported under ``if TYPE_CHECKING:`` so the runtime cold-start
# contract is preserved (Python evaluates ``TYPE_CHECKING`` as
# ``False``); the runtime ``isinstance`` checks lazy-import the class
# via ``importlib.import_module``. The static import-linter graph
# nevertheless sees the type-only edge and would flag it as a pydantic
# violation — whitelist it here so the spirit of the contract (no eager
# pydantic at import time) stays kept while the typed annotation
# survives.
ignore_imports = ["codegenie.cli -> codegenie.output.redacted_slice"]

[[tool.importlinter.contracts]]
name = "codegenie (__init__) must not top-level import heavy modules"
type = "forbidden"
source_modules = ["codegenie"]
# `as_packages = false` scopes the source to JUST `codegenie/__init__.py`,
# not the whole `codegenie.*` tree. The cold-start defense is "what does the
# CLI entry import eagerly?" — submodules (codegenie.logging, codegenie.cache,
# …) are imported lazily by cli.py and may freely depend on heavy modules.
# Without this flag, adding any submodule that imports structlog/yaml/pydantic
# breaks the contract, which is over-broad vs. the documented intent.
as_packages = false
forbidden_modules = ["yaml", "jsonschema", "pydantic", "blake3", "structlog"]
